--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mongoose": "^8.16.1"
+  }
 }
